// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DistrictActivityScores when the access type is limited renders 1`] = `
<Connect(DistrictActivityScores)
  accessType="limited"
  store={
    Object {
      "dispatch": [Function],
      "getAction": [Function],
      "getActions": [Function],
      "getState": [Function],
      "isActionDispatched": [Function],
      "isActionTypeDispatched": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <DistrictActivityScores
    accessType="limited"
    classroomNames={
      Array [
        "All Classrooms",
      ]
    }
    classroomsData={Array []}
    csvData={
      Array [
        Array [
          "Classroom Name",
          "Student Name",
          "School Name",
          "Teacher Name",
          "Average Score",
          "Activity Count",
          "Time Spent",
          "Last Active",
        ],
      ]
    }
    errors={false}
    filteredClassroomsData={Array []}
    getDistrictActivityScores={[Function]}
    loading={false}
    schoolNames={
      Array [
        "All Schools",
      ]
    }
    selectedClassroom="All Classrooms"
    selectedSchool="All Schools"
    selectedTeacher="All Teachers"
    store={
      Object {
        "dispatch": [Function],
        "getAction": [Function],
        "getActions": [Function],
        "getState": [Function],
        "isActionDispatched": [Function],
        "isActionTypeDispatched": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      }
    }
    switchClassroom={[Function]}
    switchSchool={[Function]}
    switchTeacher={[Function]}
    teacherNames={
      Array [
        "All Teachers",
      ]
    }
  >
    <div
      className="container gray-background-accommodate-footer"
    >
      <NonPremiumReport
        bezelPath="activity_scores_report_product_bezel_2x.png"
        headerText="Activity Scores Report"
        subheaderText="View the overall average score for each student per class. Included with Quill Premium."
      >
        <div
          className="white-background-accommodate-footer"
        >
          <div
            className="container non-premium-admin-report"
          >
            <section
              className="top-section"
            >
              <h1>
                Activity Scores Report
              </h1>
              <p>
                View the overall average score for each student per class. Included with Quill Premium.
              </p>
              <div
                className="buttons"
              >
                <a
                  className="quill-button contained primary large focus-on-light"
                  href="https://calendly.com/alex-quill"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  Talk to Sales
                </a>
                <a
                  className="quill-button contained primary large focus-on-light"
                  href="/premium"
                  target="_blank"
                >
                  Explore Premium
                </a>
              </div>
              <img
                alt=""
                className="bezel"
                src="undefined/images/pages/administrator/non_premium_report_view/activity_scores_report_product_bezel_2x.png"
              />
            </section>
          </div>
        </div>
      </NonPremiumReport>
    </div>
  </DistrictActivityScores>
</Connect(DistrictActivityScores)>
`;

exports[`DistrictActivityScores when the access type is restricted renders 1`] = `
<Connect(DistrictActivityScores)
  accessType="restricted"
  store={
    Object {
      "dispatch": [Function],
      "getAction": [Function],
      "getActions": [Function],
      "getState": [Function],
      "isActionDispatched": [Function],
      "isActionTypeDispatched": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <DistrictActivityScores
    accessType="restricted"
    classroomNames={
      Array [
        "All Classrooms",
      ]
    }
    classroomsData={Array []}
    csvData={
      Array [
        Array [
          "Classroom Name",
          "Student Name",
          "School Name",
          "Teacher Name",
          "Average Score",
          "Activity Count",
          "Time Spent",
          "Last Active",
        ],
      ]
    }
    errors={false}
    filteredClassroomsData={Array []}
    getDistrictActivityScores={[Function]}
    loading={false}
    schoolNames={
      Array [
        "All Schools",
      ]
    }
    selectedClassroom="All Classrooms"
    selectedSchool="All Schools"
    selectedTeacher="All Teachers"
    store={
      Object {
        "dispatch": [Function],
        "getAction": [Function],
        "getActions": [Function],
        "getState": [Function],
        "isActionDispatched": [Function],
        "isActionTypeDispatched": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      }
    }
    switchClassroom={[Function]}
    switchSchool={[Function]}
    switchTeacher={[Function]}
    teacherNames={
      Array [
        "All Teachers",
      ]
    }
  >
    <div
      className="container gray-background-accommodate-footer"
    >
      <NonPremiumReport
        bezelPath="activity_scores_report_product_bezel_2x.png"
        headerText="Activity Scores Report"
        subheaderText="View the overall average score for each student per class. Included with Quill Premium."
      >
        <div
          className="white-background-accommodate-footer"
        >
          <div
            className="container non-premium-admin-report"
          >
            <section
              className="top-section"
            >
              <h1>
                Activity Scores Report
              </h1>
              <p>
                View the overall average score for each student per class. Included with Quill Premium.
              </p>
              <div
                className="buttons"
              >
                <a
                  className="quill-button contained primary large focus-on-light"
                  href="https://calendly.com/alex-quill"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  Talk to Sales
                </a>
                <a
                  className="quill-button contained primary large focus-on-light"
                  href="/premium"
                  target="_blank"
                >
                  Explore Premium
                </a>
              </div>
              <img
                alt=""
                className="bezel"
                src="undefined/images/pages/administrator/non_premium_report_view/activity_scores_report_product_bezel_2x.png"
              />
            </section>
          </div>
        </div>
      </NonPremiumReport>
    </div>
  </DistrictActivityScores>
</Connect(DistrictActivityScores)>
`;
